--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,76 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Work Sans', sans-serif;
+}
+
+/* header area style */
+header {
+    background-color: #FFF4E7;
+    padding: 50px 0;
+}
+
+.heading-section {
+    width: 80%;
+    margin: auto;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 100px;
+}
+
+.nav-title {
+    color: #131313;
+    font-size: 30px;
+}
+
+.navbar ul {
+    display: flex;
+}
+
+.navbar ul li {
+    list-style: none;
+}
+
+.navbar ul li a {
+    text-decoration: none;
+    margin-right: 30px;
+    color: #424242;
+    font-size: 16px;
+}
+
+/* branding img style */
+.branding-section {
+    text-align: center;
+}
+
+.branding-info {
+    width: 50%;
+    margin: 50px auto;
+}
+
+.branding-title {
+    font-size: 44px;
+}
+
+.branding-info p {
+    color: #727272;
+    font-size: 14px;
+    margin: 20px 0;
+}
+
+.branding-img img {
+    width: 100%;
+}
+
+.btn-primary {
+    padding: 15px 25px;
+    background-color: #FF900E;
+    color: #FFFFFF;
+    border-style: none;
+    border-radius: 5px;
+    font-weight: 600;
 }
