--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,8 @@ header {
     text-decoration: none;
     margin-right: 30px;
     color: #424242;
-    font-size: 16px;
+    font-size: 18px;
+    font-weight: 600;
 }
 
 /* branding img style */
@@ -58,7 +59,7 @@ header {
 
 .branding-info p {
     color: #727272;
-    font-size: 14px;
+    font-size: 16px;
     margin: 20px 0;
 }
 
@@ -95,7 +96,8 @@ header {
 }
 
 .feature-list-img img {
-    width: 100%;
+    width: 342px;
+    height: 342px;
 }
 
 .feature-list-title {
@@ -121,4 +123,72 @@ header {
     font-size: 16px;
     line-height: 26px;
     margin: 20px 0;
+}
+
+/* feature section style */
+.features-section {
+    width: 80%;
+    margin: auto;
+    display: flex;
+}
+
+.feature-section-info {
+    margin-right: 80px;
+    margin-top: 10px;
+}
+
+.feature-section-title {
+    color: #131313;
+    font-size: 35px;
+    font-weight: 700;
+    margin: 20px 0;
+    padding-left: 10px;
+    border-left: 4px solid #FF900E;
+}
+
+.feature-description {
+    color: #727272;
+    font-size: 16px;
+    margin: 20px 0;
+}
+
+.feature-box {
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    padding: 30px;
+    margin: 30px 0;
+}
+
+.feature-box h3 {
+    font-size: 20px;
+    color: #131313;
+    margin-bottom: 10px;
+}
+
+.feature-box p {
+    color: #727272;
+    font-size: 16px;
+}
+
+/* feature section img */
+.feature-section-img img {
+    width: 600px;
+}
+
+/* btn-secondary */
+.btn-secondary {
+    padding: 26px 30px;
+    background-color: #FF900E;
+    border: 0;
+    border-radius: 8px;
+    font-size: 20px;
+    color: #FFFFFF;
+    margin-left: -40px;
+    margin-top: -70px;
+}
+
+.secondary {
+    font-size: 45px;
+    font-weight: 600;
 }
